[package]
name = "tempchart-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.7"
axum = "0.5.16"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.1", features = ["full"] }
tower = "0.4.13"
chrono = "0.4.22"
rand = "0.8.5"
num-traits = "0.2.15"
serde = { version = "1.0.145", features = ["derive"]}