[package]
name = "tempchart-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version="0.7.7", features = ["with-chrono-0_4"] }
axum = "0.5.16"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.1", features = ["full"] }
tower = "0.4.13"
chrono = { version = "0.4.22", features = ["serde"] }
rand = "0.8.5"
num-traits = "0.2.15"
serde = { version = "1.0.145", features = ["derive"]}
jsonwebtoken = { version = "8.1.1", features = ["use_pem"] }
base64 = "0.13.0"
serde_json = "1.0.85"
reqwest = { version = "0.11.12", features = ["json"]}
openssl = "0.10.42"
anyhow = "1.0.65"
config = "0.13.2"
thiserror = "1.0.37"
